# dvd-screensaver

./: .gitignore  Cargo.toml  readme.md
assets/: resource.rc
src/: build.rs  main.rs
