[package]
name = "dvd-screensaver"
version = "2.0.2"
edition = "2021"

[dependencies]
nannou = "0.19.0"
nannou_egui = "0.19.0"
rfd = "0.14"
dirs = "5.0"
raw-window-handle = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "minwindef"] }

[profile.release]
lto = true
debug = false
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true